# cinema

./: CMakeLists.txt  CMakeLists.txt.user.34d2b99  actor.cpp  actor.h  actoredit.cpp  actoredit.h  actoredit.ui  actorspage.cpp  actorspage.h  actorview.cpp  actorview.h  actorview.ui  cinema.cpp  cinema.h  cinema.ui  cinemadb.db  client.cpp  client.h  clientedit.cpp  clientedit.h  clientedit.ui  clientspage.cpp  clientspage.h  clientview.cpp  clientview.h  clientview.ui  date.cpp  date.h  director.cpp  director.h  directoredit.cpp  directoredit.h  directoredit.ui  directorspage.cpp  directorspage.h  directorview.cpp  directorview.h  directorview.ui  film.cpp  film.h  (+49 more)
